--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>起步</title>
+    <title>Asset Management</title>
 </head>
 
 <body>
-    <script src="../dist/main.js"></script>
+    <script src="../dist/bundle.js"></script>
 </body>
 
 </html>
